--- a/src/App.css
+++ b/src/App.css
@@ -77,19 +77,27 @@
   
   /* Create three equal columns that floats next to each other */
   .column1 {
-    float: left;
-    /* width: 13.33%; */
-    padding: 10px;
-    background-color: #f8f8f8;
-   
+  float: left;
+   /*  width: 33.33% */;
+  width: 25%;
+  padding: 10px;
+  background-color: #e4e4e4;
+  font-size: 25px;
     
   }
   .column {
     float: left;
-    width: 33.33%;
+    width: 25%;
     padding: 10px;
     background-color:#f8f8f9;
-    
+    font-size: 25px;
+  }
+  .column-map {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    background-color:#f8f8f9;
+    font-size: 25px;
   }
   /* Clear floats after the columns */
   .row:after {
@@ -107,23 +115,12 @@
   }
   /* 3 col layout ends */
 .api {
-  background-color:#f8f8f9;
-  width: 299px;
+  background-color: #e4e4e4;
   color: #423b3b;
   font-size: x-large;
 }
-.eachcountry{
-  /* border-bottom: 1px solid #efe9df; */
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
-  height: 15vh;
-}
-.countrynamesclass{
-  /* box-shadow:inset 0px 0px 15px 3px #23395e;
-	background:linear-gradient(to bottom, #2e466e 5%, #415989 100%);
-	background-color:#2e466e; */
-	/* border-radius:17px; */
-  /* border-radius:5px;
-	border:1px solid #1f2f47; */
+
+/* .countrynamesclass{
 	display:inline-block;
 	cursor:pointer;
 	color:#2e466e;
@@ -133,6 +130,9 @@
 	text-decoration:none;
   text-shadow:0px 1px 0px #263666;
   font-size: x-large;
+} */
+.countrynamesclass {
+  cursor: pointer;
 }
 .countrynamesclass:hover {
 	/* background:linear-gradient(to bottom, #415989 5%, #2e466e 100%); */
@@ -142,4 +142,16 @@
 .countrynamesclass:active {
 	position:relative;
 	top:1px;
+}
+.country {
+  font-size: 25px;
+}
+.countrylist-p {
+  border-bottom: 1px solid silver;
+}
+.currentsituation-bar {
+  /* background-color: #e4e4e4; */
+  height: 74px;
+  background-color: #bbdefb;
+  padding: 1px;
 }
