--- a/src/App.css
+++ b/src/App.css
@@ -48,27 +48,10 @@
 .MuiTypography-h6{
   color: #f5f5f5 !important;
   font-weight: bold !important;
+      font-size: 1.8rem !important;
 }
-.sidebarStyle {
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 12px;
-  background-color: #404040;
-  color: #ffffff;
-  z-index: 1 !important;
-  padding: 6px;
-  font-weight: bold;
-  }
+
    
-  .mapContainer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  }
 
   /* responsive 3 column layput */
   * {
@@ -94,7 +77,7 @@
   }
   .column-map {
     float: left;
-    width: 50%;
+    width: 70%;
     padding: 10px;
     background-color:#f8f8f9;
     font-size: 25px;
@@ -120,7 +103,7 @@
   font-size: x-large;
 }
 
-/* .countrynamesclass{
+/* .countrynames-a{
 	display:inline-block;
 	cursor:pointer;
 	color:#2e466e;
@@ -131,15 +114,15 @@
   text-shadow:0px 1px 0px #263666;
   font-size: x-large;
 } */
-.countrynamesclass {
+.countrynames-a {
   cursor: pointer;
 }
-.countrynamesclass:hover {
+.countrynames-a:hover {
 	/* background:linear-gradient(to bottom, #415989 5%, #2e466e 100%); */
   /* background-color:#415989; */
   background-color: lavender;
 }
-.countrynamesclass:active {
+.countrynames-a:active {
 	position:relative;
 	top:1px;
 }
@@ -154,4 +137,25 @@
   height: 74px;
   background-color: #bbdefb;
   padding: 1px;
+}
+.mapContainer {
+    position: absolute;
+    top: 160px;
+    right: 0;
+    left: 515px;
+    bottom: 40px;
+    height: 80vh;
+    width: 67%;
+}
+.sidebarStyle {
+display: inline-block;
+position: absolute;
+/* top: 0;
+left: 0; */
+margin: 12px;
+background-color: #404040;
+color: #ffffff;
+z-index: 1 !important;
+padding: 6px;
+font-weight: bold;
 }
