--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,16 @@ z-index: 1 !important;
 padding: 6px;
 font-weight: bold;
 }
+.coordinates {
+background: rgba(0, 0, 0, 0.5);
+color: #fff;
+position: absolute;
+bottom: 40px;
+left: 10px;
+padding: 5px 10px;
+margin: 0;
+font-size: 11px;
+line-height: 18px;
+border-radius: 3px;
+display: none;
+}
